# RegularExpressions-to-DFA

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh  test.sh
.github/workflows/: build.yml
src/: app  main.cpp
src/automata/: automata.cpp  automata.h
src/graph/: graph.cpp  graph.h
src/nfa/: nfa.cpp  nfa.h
src/node/: node.cpp  node.h
tests/: graph.test.cpp  graph.test.h
